@@ -4,6 +4,18 @@ context = mimetypes
 iconsdir = $(themedir)/$(size)/$(context)
 
 icons_DATA =						\
-	gnome-mime-application-x-gnome-saved-search.svg
+	application-x-executable.svg	\
+	audio-x-generic.svg	\
+	font-x-generic.svg	\
+	image-x-generic.svg	\
+	text-html.svg	\
+	text-x-generic.svg	\
+	text-x-script.svg	\
+	video-x-generic.svg	\
+	x-office-address-book.svg	\
+	x-office-calendar.svg	\
+	x-office-document.svg	\
+	x-office-presentation.svg	\
+	x-office-spreadsheet.svg
 
 EXTRA_DIST = $(icons_DATA)
